--- a/springboot_food/src/main/resources/application.properties
+++ b/springboot_food/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/food?characterEncoding=utf8
 spring.datasource.username=root
 #####
-spring.datasource.password=123456
+spring.datasource.password=root
 #jpa
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
