--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.context-path=/food
 
 #database
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/food?characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://106.13.106.73:3306/milk?characterEncoding=utf8
 spring.datasource.username=root
 #####
 spring.datasource.password=root
